--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -8,12 +8,7 @@
 	<body epub:type="frontmatter">
 		<section id="epigraph" epub:type="epigraph">
 			<blockquote>
-				<p>
-“I have no wife nor children, good or bad, to provide for. A mere
-spectator of other men’s fortunes and adventures, and how they play their
-parts; which, methinks, are diversely presented unto me, as from a common
-theatre or scene.”—BURTON.
-</p>
+				<p>“I have no wife nor children, good or bad, to provide for. A mere spectator of other men’s fortunes and adventures, and how they play their parts; which, methinks, are diversely presented unto me, as from a common theatre or scene.”—BURTON.</p>
 			</blockquote>
 		</section>
 	</body>
