[Semantics] Story 3 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -12,6 +12,9 @@
 				<li id="note-1" epub:type="rearnote">
 					<p>I cannot avoid subjoining in a note a succeeding paragraph of Scott’s letter, which, though it does not relate to the main subject of our correspondence, was too characteristic to be omitted. Some time previously I had sent Miss Sophia Scott small duodecimo <span epub:type="z3998:nationality">American</span> editions of her father’s poems published in <span epub:type="z3998:place">Edinburgh</span> in quarto volumes; showing the “nigromancy” of the <span epub:type="z3998:nationality">American</span> press, by which a quart of wine is conjured into a pint bottle. Scott observes: “In my hurry, I have not thanked you in Sophia’s name for the kind attention which furnished her with the <span epub:type="z3998:nationality">American</span> volumes. I am not quite sure I can add my own, since you have made her acquainted with much more of papa’s folly than she would ever otherwise have learned; for I had taken special care they should never see any of those things during their earlier years. I think I have told you that Walter is sweeping the firmament with a feather like a maypole and indenting the pavement with a sword like a scythe⁠—in other words, he has become a whiskered hussar in the 18th Dragoons.” <a href="../text/preface.xhtml#noteref-1" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-1" epub:type="rearnote">
+					<p>Address on the opening of the Liverpool Institution. <a href="../text/preface.xhtml#noteref-2" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
