[Semantics] Story 4 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/the-wife.xhtml
+++ b/src/epub/text/the-wife.xhtml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Chapter 5</title>
+		<title>The Wife</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-5" epub:type="chapter">
-			<h2>THE WIFE.</h2>
-			<pre xml:space="preserve"> The treasures of the deep are not so precious As are the concealed comforts of a man Lock’d up in woman’s love. I scent the air Of blessings, when I came but near the house, What a delicious breath marriage sends forth⁠—The violet bed’s no sweeter! MIDDLETON. </pre>
-			<p class="pfirst"><span class="dropcap" style="font-size: 4.00em">I</span> HAVE often had occasion to remark the fortitude with which women sustain the most overwhelming reverses of fortune. Those disasters which break down the spirit of a man, and prostrate him in the dust, seem to call forth all the energies of the softer sex, and give such intrepidity and elevation to their character, that at times it approaches to sublimity. Nothing can be more touching, than to behold a soft and tender female, who had been all weakness and dependence, and alive to every trivial roughness, while threading the prosperous paths of life, suddenly rising in mental force to be the comforter and support of her husband under misfortune, and abiding with unshrinking firmness the bitterest blasts of adversity.</p>
+		<section id="roscoe" epub:type="volume se:short-story">
+			<header>
+				<h2 epub:type="title">The Wife</h2>
+				<blockquote epub:type="epigraph z3998:poem">
+					<p>
+						<span>The treasures of the deep are not so precious</span>
+						<br/>
+						<span>As are the concealed comforts of a man</span>
+						<br/>
+						<span>Lock’d up in woman’s love. I scent the air</span>
+						<br/>
+						<span>Of blessings, when I came but near the house.</span>
+						<br/>
+						<span>What a delicious breath marriage sends forth …</span>
+						<br/>
+						<span>The violet bed’s no sweeter!</span>
+					</p>
+					<cite>Middleton</cite>
+				</blockquote>
+			</header>
+			<p>I have often had occasion to remark the fortitude with which women sustain the most overwhelming reverses of fortune. Those disasters which break down the spirit of a man, and prostrate him in the dust, seem to call forth all the energies of the softer sex, and give such intrepidity and elevation to their character, that at times it approaches to sublimity. Nothing can be more touching, than to behold a soft and tender female, who had been all weakness and dependence, and alive to every trivial roughness, while threading the prosperous paths of life, suddenly rising in mental force to be the comforter and support of her husband under misfortune, and abiding with unshrinking firmness the bitterest blasts of adversity.</p>
 			<p>As the vine, which has long twined its graceful foliage about the oak, and been lifted by it into sunshine, will, when the hardy plant is rifted by the thunderbolt, cling round it with its caressing tendrils, and bind up its shattered boughs, so is it beautifully ordered by Providence, that woman, who is the mere dependent and ornament of man in his happier hours, should be his stay and solace when smitten with sudden calamity; winding herself into the rugged recesses of his nature, tenderly supporting the drooping head, and binding up the broken heart.</p>
 			<p>I was once congratulating a friend, who had around him a blooming family, knit together in the strongest affection. “I can wish you no better lot,” said he, with enthusiasm, “than to have a wife and children. If you are prosperous, there they are to share your prosperity; if otherwise, there they are to comfort you.” And, indeed, I have observed that a married man falling into misfortune, is more apt to retrieve his situation in the world than a single one; partly, because he is more stimulated to exertion by the necessities of the helpless and beloved beings who depend upon him for subsistence, but chiefly because his spirits are soothed and relieved by domestic endearments, and his self-respect kept alive by finding, that, though all abroad is darkness and humiliation, yet there is still a little world of love at home, of which he is the monarch. Whereas, a single man is apt to run to waste and self-neglect; to fancy himself lonely and abandoned, and his heart to fall to ruin, like some deserted mansion, for want of an inhabitant.</p>
 			<p>These observations call to mind a little domestic story, of which I was once a witness. My intimate friend, Leslie, had married a beautiful and accomplished girl, who had been brought up in the midst of fashionable life. She had, it is true, no fortune, but that of my friend was ample; and he delighted in the anticipation of indulging her in every elegant pursuit, and administering to those delicate tastes and fancies that spread a kind of witchery about the sex.⁠—“Her life,” said he, “shall be like a fairy tale.”</p>
@@ -38,47 +55,10 @@
 			<p>“Admirable girl!” exclaimed I. “You call yourself poor, my friend; you never were so rich⁠—you never knew the boundless treasures of excellence you possessed in that woman.”</p>
 			<p>“Oh! but, my friend, if this first meeting at the cottage were over, I think I could then be comfortable. But this is her first day of real experience; she has been introduced into a humble dwelling⁠—she has been employed all day in arranging its miserable equipments⁠—she has, for the first time, known the fatigues of domestic employment⁠—she has, for the first time, looked around her on a home destitute of everything elegant⁠—almost of everything convenient; and may now be sitting down, exhausted and spiritless, brooding over a prospect of future poverty.”</p>
 			<p>There was a degree of probability in this picture that I could not gainsay, so we walked on in silence.</p>
-			<div class="fig" style="width:50%;">
-				<img alt="0064m " src="images/0064m.jpg" width="100%"/>
-				<br/>
-			</div>
-			<h5>
-				<a href="images/0064.jpg">
-					<i>Original</i>
-				</a>
-			</h5>
 			<p>After turning from the main road up a narrow lane, so thickly shaded with forest-trees as to give it a complete air of seclusion, we came in sight of the cottage. It was humble enough in its appearance for the most pastoral poet; and yet it had a pleasing rural look. A wild vine had overrun one end with a profusion of foliage; a few trees threw their branches gracefully over it; and I observed several pots of flowers tastefully disposed about the door, and on the grass-plot in front. A small wicket-gate opened upon a footpath that wound through some shrubbery to the door. Just as we approached, we heard the sound of music⁠—Leslie grasped my arm; we paused and listened. It was Mary’s voice singing, in a style of the most touching simplicity, a little air of which her husband was peculiarly fond.</p>
 			<p>I felt Leslie’s hand tremble on my arm. He stepped forward, to hear more distinctly. His step made a noise on the gravel-walk. A bright beautiful face glanced out at the window, and vanished⁠—a light footstep-was heard⁠—and Mary came tripping forth to meet us. She was in a pretty rural dress of white; a few wild flowers were twisted in her fine hair; a fresh bloom was on her cheek; her whole countenance beamed with smiles⁠—I had never seen her look so lovely.</p>
 			<p>“My dear George,” cried she, “I am so glad you are come; I have been watching and watching for you; and running down the lane, and looking out for you. I’ve set out a table under a beautiful tree behind the cottage; and I’ve been gathering some of the most delicious strawberries, for I know you are fond of them⁠—and we have such excellent cream⁠—and everything is so sweet and still here-Oh!”⁠—said she, putting her arm within his, and looking up brightly in his face, “Oh, we shall be so happy!”</p>
 			<p>Poor Leslie was overcome.⁠—He caught her to his bosom⁠—he folded his arms round her⁠—he kissed her again and again⁠—he could not speak, but the tears gushed into his eyes; and he has often assured me, that though the world has since gone prosperously with him, and his life has, indeed, been a happy one, yet never has he experienced a moment of more exquisite felicity.</p>
-			<div class="fig" style="width:50%;">
-				<img alt="0066m " src="images/0066m.jpg" width="100%"/>
-				<br/>
-			</div>
-			<h5>
-				<a href="images/0066.jpg">
-					<i>Original</i>
-				</a>
-			</h5>
-			<p>				<a id="link2H_4_0008" name="link2H_4_0008">
-					<!-- H2 anchor -->
-				</a>
-</p>
-			<div style="height: 4em;">
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-			</div>
-			<div class="fig" style="width:50%;">
-				<img alt="0067m " src="images/0067m.jpg" width="100%"/>
-				<br/>
-			</div>
-			<h5>
-				<a href="images/0067.jpg">
-					<i>Original</i>
-				</a>
-			</h5>
 		</section>
 	</body>
 </html>
