[Semantics] Fix story headers

--- a/src/epub/text/rip-van-winkle.xhtml
+++ b/src/epub/text/rip-van-winkle.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="roscoe" epub:type="volume se:short-story">
+		<section id="rip-van-winkle" epub:type="volume se:short-story">
 			<header>
 				<h2 epub:type="title">Rip Van Winkle</h2>
 				<p epub:type="bridgehead">A posthumous writing of Diedrich Knickerbocker.</p>
