--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -15,6 +15,9 @@
 				<li id="note-1" epub:type="rearnote">
 					<p>Address on the opening of the Liverpool Institution. <a href="../text/preface.xhtml#noteref-2" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-3" epub:type="rearnote">
+					<p>From a poem on the death of the Princess Charlotte, by the Reverend Rann Kennedy, <abbr class="degree">AM</abbr>. <a href="../text/rural-life-in-england.xhtml#noteref-3" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
