--- a/src/epub/text/christmas-day.xhtml
+++ b/src/epub/text/christmas-day.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="chapter-24" epub:type="chapter">
 			<h2>CHRISTMAS DAY.</h2>
-			<pre xml:space="preserve"> Dark and dull night, flie hence away, And give the honor to this day That sees December turn’d to May … . … . Why does the chilling winter’s morne Smile like a field beset with corn? Or smell like to a meade new-shorne, Thus on the sudden?⁠—come and see The cause why things thus fragrant be. HERRICK. </pre>
+			<pre xml:space="preserve"> Dark and dull night, flie hence away, And give the honor to this day That sees December turn’d to May. … . … Why does the chilling winter’s morne Smile like a field beset with corn? Or smell like to a meade new-shorne, Thus on the sudden?⁠—come and see The cause why things thus fragrant be. HERRICK. </pre>
 			<div class="figleft" style="width:15%;">
 				<img alt="9292m " src="images/9292m.jpg" width="100%"/>
 				<br/>
