--- a/src/epub/text/english-writers-on-america.xhtml
+++ b/src/epub/text/english-writers-on-america.xhtml
@@ -10,7 +10,7 @@
 			<header>
 				<h2 epub:type="title"><span epub:type="z3998:nationality">English</span> Writers on <span epub:type="z3998:place">America</span></h2>
 				<blockquote epub:type="epigraph">
-					<p>“Methinks I see in my mind a noble and puissant nation, rousting herself like a strong man after sleep, and shaking her invincible locks; methinks I see her as an eagle, mewing her mighty youth, and kindling her endazzled eyes at the full midday beam.⁠”</p>
+					<p>“Methinks I see in my mind a noble and puissant nation, rousting herself like a strong man after sleep, and shaking her invincible locks; methinks I see her as an eagle, mewing her mighty youth, and kindling her endazzled eyes at the full midday beam.”</p>
 					<cite>Milton on the Liberty of the Press</cite>
 				</blockquote>
 			</header>
