--- a/src/epub/text/roscoe.xhtml
+++ b/src/epub/text/roscoe.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title">Roscoe</h2>
 				<blockquote epub:type="epigraph z3998:verse">
 					<p>
-						<span>—⁠In the service of mankind to be</span>
+						<span>—In the service of mankind to be</span>
 						<br/>
 						<span>A guardian god below; still to employ</span>
 						<br/>
