--- a/src/epub/text/little-britain.xhtml
+++ b/src/epub/text/little-britain.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="chapter-27" epub:type="chapter">
 			<h2>LITTLE BRITAIN.</h2>
-			<p>What I write is most true. … . I have a whole booke of cases lying by me, which if I should sette foorth, some grave auntients (within the hearing of Bow Bell) would be out of charity with me. NASH.</p>
+			<p>What I write is most true.. … I have a whole booke of cases lying by me, which if I should sette foorth, some grave auntients (within the hearing of Bow Bell) would be out of charity with me. NASH.</p>
 			<div class="figleft" style="width:15%;">
 				<img alt="9337m " src="images/9337m.jpg" width="100%"/>
 				<br/>
