[Semantics] Story 10 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -18,6 +18,42 @@
 				<li id="note-3" epub:type="rearnote">
 					<p>From a poem on the death of the Princess Charlotte, by the Reverend Rann Kennedy, <abbr class="degree">AM</abbr>. <a href="../text/rural-life-in-england.xhtml#noteref-3" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-4" epub:type="rearnote">
+					<p><cite>Buchanan</cite>. <a href="../text/a-royal-poet.xhtml#noteref-4" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-5" epub:type="rearnote">
+					<p><cite>Ballenden’s translation of Hector Boyce</cite>. <a href="../text/a-royal-poet.xhtml#noteref-5" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-6" epub:type="rearnote">
+					<p><cite>Roger L’Estrange</cite>. <a href="../text/a-royal-poet.xhtml#noteref-6" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-7" epub:type="rearnote">
+					<p>Lyf, Person. <a href="../text/a-royal-poet.xhtml#noteref-7" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-8" epub:type="rearnote">
+					<p>Twistis, small boughs or twigs. <a href="../text/a-royal-poet.xhtml#noteref-8" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-9" epub:type="rearnote">
+					<p>Note.⁠—The language of the quotations is generally modernized. <a href="../text/a-royal-poet.xhtml#noteref-9" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-10" epub:type="rearnote">
+					<p>Setten, incline. <a href="../text/a-royal-poet.xhtml#noteref-10" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-11" epub:type="rearnote">
+					<p>Gilt, what injury have I done, <abbr class="eoc">etc.</abbr> <a href="../text/a-royal-poet.xhtml#noteref-11" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-12" epub:type="rearnote">
+					<p>Wrought gold. <a href="../text/a-royal-poet.xhtml#noteref-12" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-13" epub:type="rearnote">
+					<p>Largesse, bounty. <a href="../text/a-royal-poet.xhtml#noteref-13" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-14" epub:type="rearnote">
+					<p>Estate, dignity. <a href="../text/a-royal-poet.xhtml#noteref-14" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-15" epub:type="rearnote">
+					<p>Cunning, discretion. <a href="../text/a-royal-poet.xhtml#noteref-15" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
