--- a/src/epub/text/the-widow-and-her-son.xhtml
+++ b/src/epub/text/the-widow-and-her-son.xhtml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Chapter 13</title>
+		<title>The Widow and Her Son</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-13" epub:type="chapter">
-			<h2>THE WIDOW AND HER SON.</h2>
-			<pre xml:space="preserve"> Pittie olde age, within whose silver haires Honour and reverence evermore have rain’d. MARLOWE’S TAMBURLAINE. </pre>
-			<div class="figleft" style="width:15%;">
-				<img alt="9163m " src="images/9163m.jpg" width="100%"/>
-				<br/>
-				<a href="images/9163.jpg">
-					<i>Original</i>
-				</a>
-			</div>
-			<p>THOSE who are in the habit of remarking such matters must have noticed the passive quiet of an English landscape on Sunday. The clacking of the mill, the regularly recurring stroke of the flail, the din of the blacksmith’s hammer, the whistling of the ploughman, the rattling of the cart, and all other sounds of rural labor are suspended. The very farm-dogs bark less frequently, being less disturbed by passing travellers. At such times I have almost fancied the wind sunk into quiet, and that the sunny landscape, with its fresh green tints melting into blue haze, enjoyed the hallowed calm.</p>
-			<pre xml:space="preserve"> Sweet day, so pure, so calm, so brigh’ The bridal of the earth and sky. </pre>
+		<section id="the-widow-and-her-son" epub:type="volume se:short-story">
+			<header>
+				<h2 epub:type="title">The Widow and Her Son</h2>
+				<blockquote epub:type="epigraph z3998:verse">
+					<p>
+						<span>Pittie olde age, within whose silver haires</span>
+						<br/>
+						<span>Honour and reverence evermore have rain’d.</span>
+					</p>
+					<cite>Marlowe’s <i epub:type="se:name.publication.play">Tamburlaine</i></cite>
+				</blockquote>
+			</header>
+			<p>Those who are in the habit of remarking such matters must have noticed the passive quiet of an <span epub:type="z3998:nationality">English</span> landscape on Sunday. The clacking of the mill, the regularly recurring stroke of the flail, the din of the blacksmith’s hammer, the whistling of the ploughman, the rattling of the cart, and all other sounds of rural labor are suspended. The very farm-dogs bark less frequently, being less disturbed by passing travellers. At such times I have almost fancied the wind sunk into quiet, and that the sunny landscape, with its fresh green tints melting into blue haze, enjoyed the hallowed calm.</p>
+			<blockquote epub:type="z3998:poem">
+				<p>
+					<span>Sweet day, so pure, so calm, so bright,</span>
+					<br/>
+					<span>The bridal of the earth and sky.</span>
+				</p>
+			</blockquote>
 			<p>Well was it ordained that the day of devotion should be a day of rest. The holy repose which reigns over the face of nature has its moral influence; every restless passion is charmed down, and we feel the natural religion of the soul gently springing up within us. For my part, there are feelings that visit me, in a country church, amid the beautiful serenity of nature, which I experience nowhere else; and if not a more religious, I think I am a better man on Sunday than on any other day of the seven.</p>
 			<p>During my recent residence in the country, I used frequently to attend at the old village church. Its shadowy aisles, its mouldering monuments, its dark oaken panelling, all reverend with the gloom of departed years, seemed to fit it for the haunt of solemn meditation; but, being in a wealthy, aristocratic neighborhood, the glitter of fashion penetrated even into the sanctuary; and I felt myself continually thrown back upon the world, by the frigidity and pomp of the poor worms around me. The only being in the whole congregation who appeared thoroughly to feel the humble and prostrate piety of a true Christian was a poor decrepit old woman, bending under the weight of years and infirmities. She bore the traces of something better than abject poverty. The lingerings of decent pride were visible in her appearance. Her dress, though humble in the extreme, was scrupulously clean. Some trivial respect, too, had been awarded her, for she did not take her seat among the village poor, but sat alone on the steps of the altar. She seemed to have survived all love, all friendship, all society, and to have nothing left her but the hopes of heaven. When I saw her feebly rising and bending her aged form in prayer; habitually conning her prayerbook, which her palsied hand and failing eyes could not permit her to read, but which she evidently knew by heart, I felt persuaded that the faltering voice of that poor woman arose to heaven far before the responses of the clerk, the swell of the organ, or the chanting of the choir.</p>
 			<p>I am fond of loitering about country churches, and this was so delightfully situated, that it frequently attracted me. It stood on a knoll, round which a small stream made a beautiful bend and then wound its way through a long reach of soft meadow scenery. The church was surrounded by yew trees, which seemed almost coeval with itself. Its tall Gothic spire shot up lightly from among them, with rooks and crows generally wheeling about it. I was seated there one still sunny morning watching two laborers who were digging a grave. They had chosen one of the most remote and neglected corners of the churchyard, where, from the number of nameless graves around, it would appear that the indigent and friendless were huddled into the earth. I was told that the new-made grave was for the only son of a poor widow. While I was meditating on the distinctions of worldly rank, which extend thus down into the very dust, the toll of the bell announced the approach of the funeral. They were the obsequies of poverty, with which pride had nothing to do. A coffin of the plainest materials, without pall or other covering, was borne by some of the villagers. The sexton walked before with an air of cold indifference. There were no mock mourners in the trappings of affected woe, but there was one real mourner who feebly tottered after the corpse. It was the aged mother of the deceased, the poor old woman whom I had seen seated on the steps of the altar. She was supported by a humble friend, who was endeavoring to comfort her. A few of the neighboring poor had joined the train, and some children of the village were running hand in hand, now shouting with unthinking mirth, and now pausing to gaze, with childish curiosity on the grief of the mourner.</p>
-			<div class="fig" style="width:50%;">
-				<img alt="0166m " src="images/0166m.jpg" width="100%"/>
-				<br/>
-			</div>
-			<h5>
-				<a href="images/0166.jpg">
-					<i>Original</i>
-				</a>
-			</h5>
 			<p>As the funeral train approached the grave, the parson issued from the church-porch, arrayed in the surplice, with prayerbook in hand, and attended by the clerk. The service, however, was a mere act of charity. The deceased had been destitute, and the survivor was penniless. It was shuffled through, therefore, in form, but coldly and unfeeling. The well-fed priest moved but a few steps from the church door; his voice could scarcely be heard at the grave; and never did I hear the funeral service, that sublime and touching ceremony, turned into such a frigid mummery of words.</p>
 			<p>I approached the grave. The coffin was placed on the ground. On it were inscribed the name and age of the deceased⁠—“George Somers, aged 26 years.” The poor mother had been assisted to kneel down at the head of it. Her withered hands were clasped, as if in prayer; but I could perceive, by a feeble rocking of the body, and a convulsive motion of the lips, that she was gazing on the last relics of her son with the yearnings of a mother’s heart.</p>
 			<p>Preparations were made to deposit the coffin in the earth. There was that bustling stir, which breaks so harshly on the feelings of grief and affection; directions given in the cold tones of business; the striking of spades into sand and gravel; which, at the grave of those we love, is, of all sounds, the most withering. The bustle around seemed to waken the mother from a wretched revery. She raised her glazed eyes, and looked about with a faint wildness. As the men approached with cords to lower the coffin into the grave, she wrung her hands, and broke into an agony of grief. The poor woman who attended her took her by the arm endeavoring to raise her from the earth, and to whisper something like consolation: “Nay, now⁠—nay, now⁠—don’t take it so sorely to heart.” She could only shake her head, and wring her hands, as one not to be comforted.</p>
@@ -41,31 +40,12 @@
 			<p>Unfortunately, the son was tempted, during a year of scarcity and agricultural hardship, to enter into the service of one of the small craft that plied on a neighboring river. He had not been long in this employ, when he was entrapped by a press-gang, and carried off to sea. His parents received tidings of his seizure, but beyond that they could learn nothing. It was the loss of their main prop. The father, who was already infirm, grew heartless and melancholy and sunk into his grave. The widow, left lonely in her age and feebleness, could no longer support herself, and came upon the parish. Still there was a kind feeling towards her throughout the village, and a certain respect as being one of the oldest inhabitants. As no one applied for the cottage in which she had passed so many happy days, she was permitted to remain in it, where she lived solitary and almost helpless. The few wants of nature were chiefly supplied from the scanty productions of her little garden, which the neighbors would now and then cultivate for her. It was but a few days before the time at which these circumstances were told me, that she was gathering some vegetables for her repast, when she heard the cottage-door which faced the garden, suddenly opened. A stranger came out, and seemed to be looking eagerly and wildly around. He was dressed in seamen’s clothes, was emaciated and ghastly pale, and bore the air of one broken by sickness and hardships. He saw her and hastened towards her, but his steps were faint and faltering; he sank on his knees before her and sobbed like a child. The poor woman gazed upon him with a vacant and wandering eye. “Oh, my dear, dear mother! don’t you know your son? your poor boy, George?” It was, indeed, the wreck of her once noble lad; who shattered by wounds, by sickness and foreign imprisonment, had, at length, dragged his wasted limbs homeward, to repose among the scenes of his childhood.</p>
 			<p>I will not attempt to detail the particulars of such a meeting, where sorrow and joy were so completely blended: still, he was alive! he was come home! he might yet live to comfort and cherish her old age! Nature, however, was exhausted in him; and if anything had been wanting to finish the work of fate, the desolation of his native cottage would have been sufficient. He stretched himself on the pallet on which his widowed mother had passed many a sleepless night, and he never rose from it again.</p>
 			<p>The villagers, when they heard that George Somers had returned, crowded to see him, offering every comfort and assistance that their humble means afforded. He was too weak, however, to talk⁠—he could only look his thanks. His mother was his constant attendant; and he seemed unwilling to be helped by any other hand.</p>
-			<div class="fig" style="width:50%;">
-				<img alt="0171m " src="images/0171m.jpg" width="100%"/>
-				<br/>
-			</div>
-			<h5>
-				<a href="images/0171.jpg">
-					<i>Original</i>
-				</a>
-			</h5>
 			<p>There is something in sickness that breaks down the pride of manhood, that softens the heart, and brings it back to the feelings of infancy. Who that has languished, even in advanced life, in sickness and despondency, who that has pined on a weary bed in the neglect and loneliness of a foreign land, but has thought on the mother “that looked on his childhood,” that smoothed his pillow, and administered to his helplessness? Oh, there is an enduring tenderness in the love of a mother to a son, that transcends all other affections of the heart. It is neither to be chilled by selfishness, nor daunted by danger, nor weakened by worthlessness, nor stifled by ingratitude. She will sacrifice every comfort to his convenience; she will surrender every pleasure to his enjoyment; she will glory in his fame and exult in his prosperity; and, if misfortune overtake him, he will be the dearer to her from misfortune; and if disgrace settle upon his name, she will still love and cherish him in spite of his disgrace; and if all the world beside cast him off, she will be all the world to him.</p>
 			<p>Poor George Somers had known what it was to be in sickness, and none to soothe⁠—lonely and in prison, and none to visit him. He could not endure his mother from his sight; if she moved away, his eye would follow her. She would sit for hours by his bed watching him as he slept. Sometimes he would start from a feverish dream, and look anxiously up until he saw her bending over him; when he would take her hand, lay it on his bosom, and fall asleep with the tranquillity of a child. In this way he died.</p>
 			<p>My first impulse on hearing this humble tale of affliction was to visit the cottage of the mourner, and administer pecuniary assistance, and, if possible, comfort. I found, however, on inquiry, that the good feelings of the villagers had prompted them to do everything that the case admitted; and as the poor know best how to console each other’s sorrows, I did not venture to intrude.</p>
 			<p>The next Sunday I was at the village church, when, to my surprise, I saw the poor old woman tottering down the aisle to her accustomed seat on the steps of the altar.</p>
 			<p>She had made an effort to put on something like mourning for her son; and nothing could be more touching than this struggle between pious affection and utter poverty⁠—a black ribbon or so, a faded black handkerchief, and one or two more such humble attempts to express by outward signs that grief which passes show. When I looked round upon the storied monuments, the stately hatchments, the cold marble pomp with which grandeur mourned magnificently over departed pride, and turned to this poor widow, bowed down by age and sorrow at the altar of her God, and offering up the prayers and praises of a pious though a broken heart, I felt that this living monument of real grief was worth them all.</p>
 			<p>I related her story to some of the wealthy members of the congregation, and they were moved by it. They exerted themselves to render her situation more comfortable, and to lighten her afflictions. It was, however, but smoothing a few steps to the grave. In the course of a Sunday or two after, she was missed from her usual seat at church, and before I left the neighborhood I heard, with a feeling of satisfaction, that she had quietly breathed her last, and had gone to rejoin those she loved, in that world where sorrow is never known and friends are never parted.</p>
-			<p>				<a id="link2H_4_0016" name="link2H_4_0016">
-					<!-- H2 anchor -->
-				</a>
-</p>
-			<div style="height: 4em;">
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-			</div>
 		</section>
 	</body>
 </html>
