--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -54,6 +54,9 @@
 				<li id="note-15" epub:type="rearnote">
 					<p>Cunning, discretion. <a href="../text/a-royal-poet.xhtml#noteref-15" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-16" epub:type="rearnote">
+					<p>Part of a sketch omitted in the preceding editions. <a href="../text/a-sunday-in-london.xhtml#noteref-16" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
