[Semantics] Story 14 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -57,6 +57,66 @@
 				<li id="note-16" epub:type="rearnote">
 					<p>Part of a sketch omitted in the preceding editions. <a href="../text/a-sunday-in-london.xhtml#noteref-16" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-17" epub:type="rearnote">
+					<p>The following was the ancient inscription on the monument of this worthy, which, unhappily, was destroyed in the great conflagration.</p>
+					<blockquote epub:type="z3998:poem">
+						<p>
+							<span>Hereunder lyth a man of Fame,</span>
+							<br/>
+							<span>William Walworth callyd by name;</span>
+							<br/>
+							<span>Fishmonger he was in lyfftime here,</span>
+							<br/>
+							<span>And twise Lord Maior, as in books appere;</span>
+							<br/>
+							<span>Who, with courage stout and manly myght,</span>
+							<br/>
+							<span>Slew Jack Straw in Kyng Richard’s sight.</span>
+							<br/>
+							<span>For which act done, and trew entent,</span>
+							<br/>
+							<span>The Kyng made him knyght incontinent;</span>
+							<br/>
+							<span>And gave him armes, as here you see,</span>
+							<br/>
+							<span>To declare his fact and chivaldrie.</span>
+							<br/>
+							<span>He left this lyff the yere of our God</span>
+							<br/>
+							<span>Thirteen hundred fourscore and three odd.</span>
+						</p>
+					</blockquote>
+					<p>An error in the foregoing inscription has been corrected by the venerable Stowe. “Whereas,” saith he, “it hath been far spread abroad by vulgar opinion, that the rebel smitten down so manfully by Sir William Walworth, the then worthy Lord Maior, was named Jack Straw, and not Wat Tyler, I thought good to reconcile this rash-conceived doubt by such testimony as I find in ancient and good records. The principal leaders, or captains, of the commons, were Wat Tyler, as the first man; the second was John, or Jack, Straw,” <abbr>etc.</abbr>, <abbr class="eoc">etc.</abbr>⁠ <cite>Stowe’s London</cite>. <a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-17" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-18" epub:type="rearnote">
+					<p>As this inscription is rife with excellent morality, I transcribe it for the admonition of delinquent tapsters. It is no doubt, the production of some choice spirit who once frequented the Boar’s Head.</p>
+					<blockquote epub:type="z3998:poem">
+						<p>
+							<span>Bacchus, to give the toping world surprise,</span>
+							<br/>
+							<span>Produced one sober son, and here he lies.</span>
+							<br/>
+							<span>Though rear’d among full hogsheads, he defy’d</span>
+							<br/>
+							<span>The charms of wine, and everyone beside.</span>
+							<br/>
+							<span>O reader, if to justice thou’rt inclined,</span>
+							<br/>
+							<span>Keep honest Preston daily in thy mind.</span>
+							<br/>
+							<span>He drew good wine, took care to fill his pots,</span>
+							<br/>
+							<span>Had sundry virtues that excused his faults.</span>
+							<br/>
+							<span>You that on Bacchus have the like dependence,</span>
+							<br/>
+							<span>Pray copy Bob in measure and attendance. <a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-18" epub:type="se:referrer">↩</a></span>
+						</p>
+					</blockquote>
+				</li>
+				<li id="note-19" epub:type="rearnote">
+					<p>“Thou didst swear to me upon a parcel-gilt goblet, sitting in my Dolphin chamber, at the round table, by a sea-coal fire, on Wednesday, in <span epub:type="z3998:event">Whitsun</span>-week, when the prince broke thy head for likening his father to a singing man at <span epub:type="z3998:place">Windsor</span>; thou didst swear to me then, as I was washing thy wound, to marry me, and make me my lady, thy wife. Canst thou deny it?”⁠—<cite>Henry <span epub:type="z3998:roman">IV</span>, Part 2</cite>.<a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-19" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
