[Semantics] Story 14 - Fix event semantics

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -115,7 +115,7 @@
 					</blockquote>
 				</li>
 				<li id="note-19" epub:type="rearnote">
-					<p>“Thou didst swear to me upon a parcel-gilt goblet, sitting in my Dolphin chamber, at the round table, by a sea-coal fire, on Wednesday, in <span epub:type="z3998:event">Whitsun</span>-week, when the prince broke thy head for likening his father to a singing man at <span epub:type="z3998:place">Windsor</span>; thou didst swear to me then, as I was washing thy wound, to marry me, and make me my lady, thy wife. Canst thou deny it?”⁠—<cite>Henry <span epub:type="z3998:roman">IV</span>, Part 2</cite>.<a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-19" epub:type="se:referrer">↩</a></p>
+					<p>“Thou didst swear to me upon a parcel-gilt goblet, sitting in my Dolphin chamber, at the round table, by a sea-coal fire, on Wednesday, in <span epub:type="z3998:event">Whitsunweek</span>, when the prince broke thy head for likening his father to a singing man at <span epub:type="z3998:place">Windsor</span>; thou didst swear to me then, as I was washing thy wound, to marry me, and make me my lady, thy wife. Canst thou deny it?”⁠—<cite>Henry <span epub:type="z3998:roman">IV</span>, Part 2</cite>.<a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-19" epub:type="se:referrer">↩</a></p>
 				</li>
 			</ol>
 		</section>
