[Semantics] Story 15 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -117,6 +117,45 @@
 				<li id="note-19" epub:type="rearnote">
 					<p>“Thou didst swear to me upon a parcel-gilt goblet, sitting in my Dolphin chamber, at the round table, by a sea-coal fire, on Wednesday, in <span epub:type="z3998:event">Whitsunweek</span>, when the prince broke thy head for likening his father to a singing man at <span epub:type="z3998:place">Windsor</span>; thou didst swear to me then, as I was washing thy wound, to marry me, and make me my lady, thy wife. Canst thou deny it?”⁠—<cite>Henry <span epub:type="z3998:roman">IV</span>, Part 2</cite>.<a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-19" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-20" epub:type="rearnote">
+					<p>In Latin and French hath many soueraine wittes had great delyte to endite, and have many noble thinges fulfilde, but certes there ben some that speaken their poisye in French, of which speche the Frenchmen have as good a fantasye as we have in hearying of Frenchmen’s Englishe.⁠—<cite>Chaucer’s <i epub:type="se:name.publication.book">Testament of Love</i></cite>. <a href="../text/the-mutability-of-literature.xhtml#noteref-20" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-21" epub:type="rearnote">
+					<p>Holinshed, in his Chronicle, observes, “Afterwards, also, by diligent vell of Geffry Chaucer and John Gowre, in the time of Richard the Second, and after them of John Scogan and John Lydgate, monke of Berrie, our said toong was brought to an excellent passe, notwithstanding that it never came unto the type of perfection until the time of Queen Elizabeth, wherein John Jewell, Bishop of <span epub:type="z3998:place">Sarum</span>, John Fox, and sundrie learned and excellent writers, have fully accomplished the ornature of the same to their great praise and mortal commendation.”<a href="../text/the-mutability-of-literature.xhtml#noteref-21" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-22" epub:type="rearnote">
+					<p>Live ever sweete booke; the simple image of his gentle witt, and the golden pillar of his noble courage; and ever notify unto the world that thy writer was the secretary of eloquence, the breath of the muses, the honey bee of the daintyest flowers of witt and arte, the pith of morale and intellectual virtues, the arme of Bellona in the field, the tongue of Suada in the chamber, the spirits of Practise in esse, and the paragon of excellence in print.⁠—<cite>Harvey Pierce’s <i epub:type="se:name.publication.book">Supererogation</i></cite>. <a href="../text/the-mutability-of-literature.xhtml#noteref-22" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-23" epub:type="rearnote">
+					<blockquote>
+						<p>
+							<span>Thorow earth and waters deepe,</span>
+							<br/>
+							<span class="i1">The pen by skill doth passe:</span>
+							<br/>
+							<span>And featly nyps the worldes abuse,</span>
+							<br/>
+							<span class="i1">And shoes us in a glasse,</span>
+							<br/>
+							<span>The vertu and the vice</span>
+							<br/>
+							<span class="i1">Of every wight alyve;</span>
+							<br/>
+							<span>The honey comb that bee doth make</span>
+							<br/>
+							<span class="i1">Is not so sweet in hyve,</span>
+							<br/>
+							<span>As are the golden leves</span>
+							<br/>
+							<span class="i1">That drops from poet’s head!</span>
+							<br/>
+							<span>Which doth surmount our common talke</span>
+							<br/>
+							<span class="i1">As farre as dross doth lead.</span>
+						</p>
+						<p><cite>Churchyard</cite>. <a href="../text/the-mutability-of-literature.xhtml#noteref-23" epub:type="se:referrer">↩</a></p>
+					</blockquote>
+				</li>
 			</ol>
 		</section>
 	</body>
