--- a/src/epub/text/the-inn-kitchen.xhtml
+++ b/src/epub/text/the-inn-kitchen.xhtml
@@ -1,53 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Chapter 18</title>
+		<title>The Inn Kitchen</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-18" epub:type="chapter">
-			<h2>THE INN KITCHEN.</h2>
-			<pre xml:space="preserve"> Shall I not take mine ease in mine inn? FALSTAFF. </pre>
-			<div class="figleft" style="width:15%;">
-				<img alt="9221m " src="images/9221m.jpg" width="100%"/>
-				<br/>
-				<a href="images/9221.jpg">
-					<i>Original</i>
-				</a>
-			</div>
-			<p>DURING a journey that I once made through the Netherlands, I had arrived one evening at the Pomme d’Or, the principal inn of a small Flemish village. It was after the hour of the table d’hote, so that I was obliged to make a solitary supper from the relics of its ampler board. The weather was chilly; I was seated alone in one end of a great gloomy dining-room, and, my repast being over, I had the prospect before me of a long dull evening, without any visible means of enlivening it. I summoned mine host and requested something to read; he brought me the whole literary stock of his household, a Dutch family Bible, an almanac in the same language, and a number of old Paris newspapers. As I sat dozing over one of the latter, reading old news and stale criticisms, my ear was now and then struck with bursts of laughter which seemed to proceed from the kitchen. Everyone that has travelled on the Continent must know how favorite a resort the kitchen of a country inn is to the middle and inferior order of travellers, particularly in that equivocal kind of weather when a fire becomes agreeable toward evening. I threw aside the newspaper and explored my way to the kitchen, to take a peep at the group that appeared to be so merry. It was composed partly of travellers who had arrived some hours before in a diligence, and partly of the usual attendants and hangers-on of inns. They were seated round a great burnished stove, that might have been mistaken for an altar at which they were worshipping. It was covered with various kitchen vessels of resplendent brightness, among which steamed and hissed a huge copper teakettle. A large lamp threw a strong mass of light upon the group, bringing out many odd features in strong relief. Its yellow rays partially illumined the spacious kitchen, dying duskily away into remote corners, except where they settled in mellow radiance on the broad side of a flitch of bacon or were reflected back from well-scoured utensils that gleamed from the midst of obscurity. A strapping Flemish lass, with long golden pendants in her ears and a necklace with a golden heart suspended to it, was the presiding priestess of the temple.</p>
+		<section id="the-inn-kitchen" epub:type="volume se:short-story">
+			<header>
+				<h2 epub:type="title">The Inn Kitchen</h2>
+				<blockquote epub:type="epigraph z3998:verse">
+					<p>
+						<span>Shall I not take mine ease in mine inn?</span>
+					</p>
+					<cite>Falstaff</cite>
+				</blockquote>
+			</header>
+			<p>During a journey that I once made through the <span epub:type="z3998:place">Netherlands</span>, I had arrived one evening at the Pomme d’Or, the principal inn of a small Flemish village. It was after the hour of the table d’hote, so that I was obliged to make a solitary supper from the relics of its ampler board. The weather was chilly; I was seated alone in one end of a great gloomy dining-room, and, my repast being over, I had the prospect before me of a long dull evening, without any visible means of enlivening it. I summoned mine host and requested something to read; he brought me the whole literary stock of his household, a <span epub:type="z3998:nationality">Dutch</span> family Bible, an almanac in the same language, and a number of old <span epub:type="z3998:place">Paris</span> newspapers. As I sat dozing over one of the latter, reading old news and stale criticisms, my ear was now and then struck with bursts of laughter which seemed to proceed from the kitchen. Everyone that has travelled on the continent must know how favorite a resort the kitchen of a country inn is to the middle and inferior order of travellers, particularly in that equivocal kind of weather when a fire becomes agreeable toward evening. I threw aside the newspaper and explored my way to the kitchen, to take a peep at the group that appeared to be so merry. It was composed partly of travellers who had arrived some hours before in a diligence, and partly of the usual attendants and hangers-on of inns. They were seated round a great burnished stove, that might have been mistaken for an altar at which they were worshipping. It was covered with various kitchen vessels of resplendent brightness, among which steamed and hissed a huge copper teakettle. A large lamp threw a strong mass of light upon the group, bringing out many odd features in strong relief. Its yellow rays partially illumined the spacious kitchen, dying duskily away into remote corners, except where they settled in mellow radiance on the broad side of a flitch of bacon or were reflected back from well-scoured utensils that gleamed from the midst of obscurity. A strapping Flemish lass, with long golden pendants in her ears and a necklace with a golden heart suspended to it, was the presiding priestess of the temple.</p>
 			<p>Many of the company were furnished with pipes, and most of them with some kind of evening potation. I found their mirth was occasioned by anecdotes which a little swarthy Frenchman, with a dry weazen face and large whiskers, was giving of his love-adventures; at the end of each of which there was one of those bursts of honest unceremonious laughter in which a man indulges in that temple of true liberty, an inn.</p>
-			<div class="fig" style="width:50%;">
-				<img alt="0223m " src="images/0223m.jpg" width="100%"/>
-				<br/>
-			</div>
-			<h5>
-				<a href="images/0223.jpg">
-					<i>Original</i>
-				</a>
-			</h5>
-			<p>As I had no better mode of getting through a tedious blustering evening, I took my seat near the stove, and listened to a variety of travellers’ tales, some very extravagant and most very dull. All of them, however, have faded from my treacherous memory except one, which I will endeavor to relate. I fear, however, it derived its chief zest from the manner in which it was told, and the peculiar air and appearance of the narrator. He was a corpulent old Swiss, who had the look of a veteran traveller. He was dressed in a tarnished green travelling-jacket, with a broad belt round his waist, and a pair of overalls with buttons from the hips to the ankles. He was of a full rubicund countenance, with a double chin, aquiline nose, and a pleasant twinkling eye. His hair was light, and curled from under an old green velvet travelling-cap stuck on one side of his head. He was interrupted more than once by the arrival of guests or the remarks of his auditors, and paused now and then to replenish his pipe; at which times he had generally a roguish leer and a sly joke for the buxom kitchen-maid.</p>
-			<p>I wish my readers could imagine the old fellow lolling in a huge armchair, one arm akimbo, the other holding a curiously twisted tobacco-pipe formed of genuine ecume de mer, decorated with silver chain and silken tassel, his head cocked on one side, and a whimsical cut of the eye occasionally as he related the following story.</p>
-			<p>				<a id="link2H_4_0021" name="link2H_4_0021">
-					<!-- H2 anchor -->
-				</a>
-</p>
-			<div style="height: 4em;">
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-			</div>
-			<div class="fig" style="width:50%;">
-				<img alt="0225m " src="images/0225m.jpg" width="100%"/>
-				<br/>
-			</div>
-			<h5>
-				<a href="images/0225.jpg">
-					<i>Original</i>
-				</a>
-			</h5>
+			<p>As I had no better mode of getting through a tedious blustering evening, I took my seat near the stove, and listened to a variety of travellers’ tales, some very extravagant and most very dull. All of them, however, have faded from my treacherous memory except one, which I will endeavor to relate. I fear, however, it derived its chief zest from the manner in which it was told, and the peculiar air and appearance of the narrator. He was a corpulent old <span epub:type="z3998:nationality">Swiss</span>, who had the look of a veteran traveller. He was dressed in a tarnished green travelling-jacket, with a broad belt round his waist, and a pair of overalls with buttons from the hips to the ankles. He was of a full rubicund countenance, with a double chin, aquiline nose, and a pleasant twinkling eye. His hair was light, and curled from under an old green velvet travelling-cap stuck on one side of his head. He was interrupted more than once by the arrival of guests or the remarks of his auditors, and paused now and then to replenish his pipe; at which times he had generally a roguish leer and a sly joke for the buxom kitchen-maid.</p>
+			<p>I wish my readers could imagine the old fellow lolling in a huge armchair, one arm akimbo, the other holding a curiously twisted tobacco-pipe formed of genuine <i xml:lang="fr">ecume de mer</i>, decorated with silver chain and silken tassel, his head cocked on one side, and a whimsical cut of the eye occasionally as he related the following story.</p>
 		</section>
 	</body>
 </html>
