[Semantics] Story 18 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -156,6 +156,12 @@
 						<p><cite>Churchyard</cite>. <a href="../text/the-mutability-of-literature.xhtml#noteref-23" epub:type="se:referrer">↩</a></p>
 					</blockquote>
 				</li>
+				<li id="note-24" epub:type="rearnote">
+					<p>The erudite reader, well versed in good-for-nothing lore, will perceive that the above Tale must have been suggested to the old <span epub:type="z3998:nationality">Swiss</span> by a little French anecdote, a circumstance said to have taken place in <span epub:type="z3998:place">Paris</span>. <a href="../text/the-spectre-bridegroom.xhtml#noteref-24" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-25" epub:type="rearnote">
+					<p><abbr>i.e.</abbr>, <b>Cat’s Elbow</b>⁠—the name of a family of those parts, and very powerful in former times. The appellation, we are told, was given in compliment to a peerless dame of the family, celebrated for a fine arm. <a href="../text/the-spectre-bridegroom.xhtml#noteref-25" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
