[Semantics] Story 19 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -162,6 +162,9 @@
 				<li id="note-25" epub:type="rearnote">
 					<p><abbr>i.e.</abbr>, <b>Cat’s Elbow</b>⁠—the name of a family of those parts, and very powerful in former times. The appellation, we are told, was given in compliment to a peerless dame of the family, celebrated for a fine arm. <a href="../text/the-spectre-bridegroom.xhtml#noteref-25" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-26" epub:type="rearnote">
+					<p>⁠<cite>Sir <abbr class="name">T.</abbr> Browne</cite>. <a href="../text/westminster-abbey.xhtml#noteref-26" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
