[Semantics] Story 21 - Fix epigraph

--- a/src/epub/text/the-stage-coach.xhtml
+++ b/src/epub/text/the-stage-coach.xhtml
@@ -19,7 +19,9 @@
 						<br/>
 						<span class="i1">Venit horâ</span>
 						<br/>
-						<span class="i1">Absque mora Libros deponendi.</span>
+						<span class="i1">Absque mora</span>
+						<br/>
+						<span>Libros deponendi.</span>
 					</p>
 					<cite>Old Holiday School Song</cite>
 				</blockquote>
