[Semantics] Story 21 - Fix title semantics

--- a/src/epub/text/the-stage-coach.xhtml
+++ b/src/epub/text/the-stage-coach.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="the-stage-coach" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title z3998:event">The Stage Coach</h2>
+				<h2 epub:type="title">The Stage Coach</h2>
 				<blockquote epub:type="epigraph z3998:song">
 					<p>
 						<span class="i1">Omne bené</span>
