--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -86,7 +86,7 @@
 							<span>Thirteen hundred fourscore and three odd.</span>
 						</p>
 					</blockquote>
-					<p>An error in the foregoing inscription has been corrected by the venerable Stowe. “Whereas,” saith he, “it hath been far spread abroad by vulgar opinion, that the rebel smitten down so manfully by Sir William Walworth, the then worthy Lord Maior, was named Jack Straw, and not Wat Tyler, I thought good to reconcile this rash-conceived doubt by such testimony as I find in ancient and good records. The principal leaders, or captains, of the commons, were Wat Tyler, as the first man; the second was John, or Jack, Straw,” <abbr>etc.</abbr>, <abbr class="eoc">etc.</abbr>⁠ <cite>Stowe’s London</cite>. <a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-17" epub:type="se:referrer">↩</a></p>
+					<p>An error in the foregoing inscription has been corrected by the venerable Stowe. “Whereas,” saith he, “it hath been far spread abroad by vulgar opinion, that the rebel smitten down so manfully by Sir William Walworth, the then worthy Lord Maior, was named Jack Straw, and not Wat Tyler, I thought good to reconcile this rash-conceived doubt by such testimony as I find in ancient and good records. The principal leaders, or captains, of the commons, were Wat Tyler, as the first man; the second was John, or Jack, Straw,” <abbr>etc.</abbr>, <abbr class="eoc">etc.</abbr> <cite>Stowe’s London</cite>. <a href="../text/the-boars-head-tavern-eastcheap.xhtml#noteref-17" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-18" epub:type="rearnote">
 					<p>As this inscription is rife with excellent morality, I transcribe it for the admonition of delinquent tapsters. It is no doubt, the production of some choice spirit who once frequented the Boar’s Head.</p>
@@ -163,10 +163,10 @@
 					<p><abbr>i.e.</abbr>, <b>Cat’s Elbow</b>⁠—the name of a family of those parts, and very powerful in former times. The appellation, we are told, was given in compliment to a peerless dame of the family, celebrated for a fine arm. <a href="../text/the-spectre-bridegroom.xhtml#noteref-25" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-26" epub:type="rearnote">
-					<p>⁠<cite>Sir <abbr class="name">T.</abbr> Browne</cite>. <a href="../text/westminster-abbey.xhtml#noteref-26" epub:type="se:referrer">↩</a></p>
+					<p><cite>Sir <abbr class="name">T.</abbr> Browne</cite>. <a href="../text/westminster-abbey.xhtml#noteref-26" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-27" epub:type="rearnote">
-					<p>⁠<cite>Poor Robin's Almanak</cite>, 1684. <a href="../text/the-stage-coach.xhtml#noteref-27" epub:type="se:referrer">↩</a></p>
+					<p><cite>Poor Robin’s Almanak</cite>, 1684. <a href="../text/the-stage-coach.xhtml#noteref-27" epub:type="se:referrer">↩</a></p>
 				</li>
 			</ol>
 		</section>
