[Semantics] Fix citation semantics

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -166,7 +166,7 @@
 					<p><cite>Sir <abbr class="name">T.</abbr> Browne</cite>. <a href="../text/westminster-abbey.xhtml#noteref-26" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-27" epub:type="rearnote">
-					<p><cite>Poor Robin’s Almanak</cite>, 1684. <a href="../text/the-stage-coach.xhtml#noteref-27" epub:type="se:referrer">↩</a></p>
+					<p><cite>Poor Robin’s Almanak, 1684</cite>. <a href="../text/the-stage-coach.xhtml#noteref-27" epub:type="se:referrer">↩</a></p>
 				</li>
 			</ol>
 		</section>
