[Semantics] Story 22 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -168,6 +168,15 @@
 				<li id="note-27" epub:type="rearnote">
 					<p><cite>Poor Robin’s Almanak, 1684</cite>. <a href="../text/the-stage-coach.xhtml#noteref-27" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-28" epub:type="rearnote">
+					<p><cite>Peacham’s <i epub:type="se:name.publication.book">Complete Gentleman</i>, 1622</cite>. <a href="../text/christmas-eve.xhtml#noteref-28" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-29" epub:type="rearnote">
+					<p>The mistletoe is still hung up in farmhouses and kitchens at <span epub:type="z3998:event">Christmas</span>, and the young men have the privilege of kissing the girls under it, plucking each time a berry from the bush. When the berries are all plucked the privilege ceases. <a href="../text/christmas-eve.xhtml#noteref-29" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-30" epub:type="rearnote">
+					<p>The <span epub:type="z3998:event">Yule</span> clog is a great log of wood, sometimes the root of a tree, brought into the house with great ceremony on <span epub:type="z3998:event">Christmas Eve</span>, laid in the fireplace, and lighted with the brand of last year’s clog. While it lasted there was great drinking, singing, and telling of tales. Sometimes it was accompanied by <span epub:type="z3998:event">Christmas</span> candles; but in the cottages the only light was from the ruddy blaze of the great wood fire. The <span epub:type="z3998:event">Yule</span> clog was to burn all night; if it went out, it was considered a sign of ill luck. <a href="../text/christmas-eve.xhtml#noteref-30" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
