--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -177,6 +177,23 @@
 				<li id="note-30" epub:type="rearnote">
 					<p>The <span epub:type="z3998:event">Yule</span> clog is a great log of wood, sometimes the root of a tree, brought into the house with great ceremony on <span epub:type="z3998:event">Christmas Eve</span>, laid in the fireplace, and lighted with the brand of last year’s clog. While it lasted there was great drinking, singing, and telling of tales. Sometimes it was accompanied by <span epub:type="z3998:event">Christmas</span> candles; but in the cottages the only light was from the ruddy blaze of the great wood fire. The <span epub:type="z3998:event">Yule</span> clog was to burn all night; if it went out, it was considered a sign of ill luck. <a href="../text/christmas-eve.xhtml#noteref-30" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-31" epub:type="rearnote">
+					<p>From the <i epub:type="se:name.publication.newspaper">Flying Eagle</i>, a small gazette, published December 24, 1652: “The House spent much time this day about the business of the Navy, for settling the affairs at sea, and before they rose, were presented with a terrible remonstrance against <span epub:type="z3998:event">Christmas</span> day, grounded upon divine Scriptures, 2 <abbr>Cor.</abbr> <span epub:type="z3998:roman">V</span> 16; 1 <abbr>Cor.</abbr> <span epub:type="z3998:roman">XV</span>. 14, 17; and in honor of the Lord’s Day, grounded upon these Scriptures, John <span epub:type="z3998:roman">XX</span> 1; <abbr>Rev.</abbr> <span epub:type="z3998:roman">I</span> 10; Psalms <span epub:type="z3998:roman">CXVIII</span> 24; <abbr>Lev.</abbr> <span epub:type="z3998:roman">XXIII</span> 7, 11; Mark <span epub:type="z3998:roman">XV</span> 8; Psalms <span epub:type="z3998:roman">LXXXIV</span> 10, in which <span epub:type="z3998:event">Christmas</span> is called Anti-christ’s masse, and those Massemongers and Papists who observe it, <abbr class="eoc">etc.</abbr> In consequence of which parliament spent some time in consultation about the abolition of <span epub:type="z3998:event">Christmas</span> day, passed orders to that effect, and resolved to sit on the following day, which was commonly called <span epub:type="z3998:event">Christmas</span> day.” <a href="../text/christmas-day.xhtml#noteref-31" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-32" epub:type="rearnote">
+					<blockquote epub:type="z3998:verse">
+						<p>
+							<span>“Ule! Ule!</span>
+							<br/>
+							<span>Three puddings in a pule;</span>
+							<br/>
+							<span>Crack nuts and cry ule!” <a href="../text/christmas-day.xhtml#noteref-32" epub:type="se:referrer">↩</a></span>
+						</p>
+					</blockquote>
+				</li>
+				<li id="note-33" epub:type="rearnote">
+					<p>“An <span epub:type="z3998:nationality">English</span> gentleman, at the opening of the great day⁠—<abbr>i.e.</abbr> on <span epub:type="z3998:event">Christmas</span> Day in the morning⁠—had all his tenants and neighbors enter his hall by daybreak. The strong beer was broached, and the blackjacks went plentifully about, with toast, sugar and nutmeg, and good Cheshire cheese. The Hackin (the great sausage) must be boiled by daybreak, or else two young men must take the maiden (<abbr>i.e.</abbr> the cook) by the arms and run her round the marketplace till she is shamed of her laziness.”⁠—Round about our Sea-Coal Fire. <a href="../text/christmas-day.xhtml#noteref-33" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
