[Typography] Fix improper capitalization

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -192,13 +192,13 @@
 					</blockquote>
 				</li>
 				<li id="note-33" epub:type="rearnote">
-					<p>“An <span epub:type="z3998:nationality">English</span> gentleman, at the opening of the great day⁠—<abbr>i.e.</abbr> on <span epub:type="z3998:event">Christmas</span> Day in the morning⁠—had all his tenants and neighbors enter his hall by daybreak. The strong beer was broached, and the blackjacks went plentifully about, with toast, sugar and nutmeg, and good Cheshire cheese. The Hackin (the great sausage) must be boiled by daybreak, or else two young men must take the maiden (<abbr>i.e.</abbr> the cook) by the arms and run her round the marketplace till she is shamed of her laziness.”⁠—Round about our Sea-Coal Fire. <a href="../text/christmas-day.xhtml#noteref-33" epub:type="se:referrer">↩</a></p>
+					<p>“An <span epub:type="z3998:nationality">English</span> gentleman, at the opening of the great day⁠—<abbr>i.e.</abbr> on <span epub:type="z3998:event">Christmas</span> day in the morning⁠—had all his tenants and neighbors enter his hall by daybreak. The strong beer was broached, and the blackjacks went plentifully about, with toast, sugar and nutmeg, and good Cheshire cheese. The Hackin (the great sausage) must be boiled by daybreak, or else two young men must take the maiden (<abbr>i.e.</abbr> the cook) by the arms and run her round the marketplace till she is shamed of her laziness.”⁠—Round about our Sea-Coal Fire. <a href="../text/christmas-day.xhtml#noteref-33" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-34" epub:type="rearnote">
 					<p><cite>Sir John Suckling</cite>. <a href="../text/the-christmas-dinner.xhtml#noteref-34" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-35" epub:type="rearnote">
-					<p>The old ceremony of serving up the boar’s head on <span epub:type="z3998:event">Christmas</span> Day is still observed in the hall of Queen’s College, Oxford. I was favored by the parson with a copy of the carol as now sung, and as it may be acceptable to such of my readers as are curious in these grave and learned matters, I give it entire.</p>
+					<p>The old ceremony of serving up the boar’s head on <span epub:type="z3998:event">Christmas</span> day is still observed in the hall of Queen’s College, Oxford. I was favored by the parson with a copy of the carol as now sung, and as it may be acceptable to such of my readers as are curious in these grave and learned matters, I give it entire.</p>
 					<blockquote epub:type="z3998:song">
 						<p>
 							<span>The boar’s head in hand bear I,</span>
